k8s-manifest/apps/order-service/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: akjamie/bookstore-order-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 256Mi
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            failureThreshold: 5
            successThreshold: 3
            initialDelaySeconds: 90
            periodSeconds: 10
          volumeMounts:
            - mountPath: "/etc/keystore"
              name: jwt-rsa-keystore
              readOnly: true
      volumes:
        - name: jwt-rsa-keystore
          secret:
            secretName: jwt-rsa
            items:
              - key: rsa.pem
                path: rsa.pem
