k8s-manifest/apps/order-service/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: order-service
  name: order-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: order-service
  type: ClusterIP
